--- a/src/main/resources/templates/cetes/main-cetes.html
+++ b/src/main/resources/templates/cetes/main-cetes.html
@@ -38,15 +38,117 @@
                 <i class="arrow"></i>
               </div>
             </div>
-            <div class="option-group field">
+            <div class="row justify-content-center" style="margin-bottom: 3rem; margin-top: 3rem;">
+              <input type="button" name="" value="Calcular" class="button btn-primary"/>
+            </div>
+            <div class="form-group field">
               <label class="option block">
                   <input name="mobileos" value="FR" type="checkbox"/>
                   <span class="checkbox"></span>  ¿Quieres que se reinviertan automáticamente el capital y los rendimientos en cetes 28 días?
               </label>
             </div>
+            <div class="form-group field">
+              <div id="slidecontainer">
+                <div class="row">
+                  <div class="col-2"><span class="text">Tiempo</span></div>
+                  <div class="col-9"><input type="range" min="1" max="12" value="1" id="myRange" style="width:100%;" /></div>
+                </div>
+              </div>
+            </div>
+            <div class="row justify-content-center" style="margin-bottom: 3rem; margin-top: 3rem;">
+              <input type="button" name="" value="Comparar" class="button btn-primary"/>
+            </div>
           </form>
         </div>
-        <div class="col-9"></div>
+        <div class="col seccion">
+          <div class="row">
+            <div class="col resultado-calc-div">
+              <div class="row">
+                <div class="col-2"></div>
+                <div class="col-5"><span class="label-calc">Titulos</span></div>
+                <div class="col-5"><span class="label-calc">Tasa bruta</span></div>
+              </div>
+              <div class="row">
+                <div class="col-2"><span class="label-calc pull-right">Cetes:</span></div>
+                <div class="col-5"><span class="label-resultado">123</span></div>
+                <div class="col-5"><span class="label-resultado">12.1%</span></div>
+              </div>
+              <div class="row">
+                <div class="col-2"><span class="label-calc pull-right">Bonddia:</span></div>
+                <div class="col-5"><span class="label-resultado">123</span></div>
+                <div class="col-5"><span class="label-resultado">12.1%</span></div>
+              </div>
+              <div class="line"></div>
+
+              <div class="row row-cetes">
+                <div class="col-1"><img src="images/question.png" alt="" /> </div>
+                <div class="col-7"><span class="label-calc pull-right">Inversion Bonddia:</span></div>
+                <div class="col-3"><span class="label-resultado">12.1%</span></div>
+              </div>
+
+            </div>
+            <div class="col resultado-calc-div">
+              <div class="row">
+                <div class="col-2"></div>
+                <div class="col-5"><span class="label-calc">Titulos</span></div>
+                <div class="col-5"><span class="label-calc">Tasa bruta</span></div>
+              </div>
+              <div class="row">
+                <div class="col-2"><span class="label-calc pull-right">Cetes:</span></div>
+                <div class="col-5"><span class="label-resultado">123</span></div>
+                <div class="col-5"><span class="label-resultado">12.1%</span></div>
+              </div>
+              <div class="row">
+                <div class="col-2"><span class="label-calc pull-right">Bonddia:</span></div>
+                <div class="col-5"><span class="label-resultado">123</span></div>
+                <div class="col-5"><span class="label-resultado">12.1%</span></div>
+              </div>
+              <div class="line"></div>
+            </div>
+            <div class="col resultado-calc-div">
+              <div class="row">
+                <div class="col-2"></div>
+                <div class="col-5"><span class="label-calc">Titulos</span></div>
+                <div class="col-5"><span class="label-calc">Tasa bruta</span></div>
+              </div>
+              <div class="row">
+                <div class="col-2"><span class="label-calc pull-right">Cetes:</span></div>
+                <div class="col-5"><span class="label-resultado">123</span></div>
+                <div class="col-5"><span class="label-resultado">12.1%</span></div>
+              </div>
+              <div class="row">
+                <div class="col-2"><span class="label-calc pull-right">Bonddia:</span></div>
+                <div class="col-5"><span class="label-resultado">123</span></div>
+                <div class="col-5"><span class="label-resultado">12.1%</span></div>
+              </div>
+              <div class="line"></div>
+            </div>
+            <div class="col resultado-calc-div">
+              <div class="row">
+                <div class="col-2"></div>
+                <div class="col-5"><span class="label-calc">Titulos</span></div>
+                <div class="col-5"><span class="label-calc">Tasa bruta</span></div>
+              </div>
+              <div class="row">
+                <div class="col-2"><span class="label-calc pull-right">Cetes:</span></div>
+                <div class="col-5"><span class="label-resultado">123</span></div>
+                <div class="col-5"><span class="label-resultado">12.1%</span></div>
+              </div>
+              <div class="row">
+                <div class="col-2"><span class="label-calc pull-right">Bonddia:</span></div>
+                <div class="col-5"><span class="label-resultado">123</span></div>
+                <div class="col-5"><span class="label-resultado">12.1%</span></div>
+              </div>
+              <div class="line"></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-3"></div>
+            <div class="col-3"></div>
+            <div class="col-3"></div>
+            <div class="col-3"></div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
