--- a/src/main/resources/static/css/main-styles.css
+++ b/src/main/resources/static/css/main-styles.css
@@ -12,28 +12,50 @@
   margin-top: 15px;
   margin-left: 35px;
   font-size: 11px;
+  max-width: 21%;
 }
 
 .row-cetes{
   margin-left: -40px;
-  margin-top: 15px;
+  margin-bottom: 3px;
 }
 
 .label-calc{
   color: #919191;
 }
 
+.label-calc-bold{
+  color: #919191;
+  font-weight: bold;
+}
+
 .label-resultado{
   color: #1C83C6;
+  font-weight: bold;
+}
+
+.text-red{
+  color: red;
+}
+
+.col-result{
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .line{
-  width: 120%;
-  height: 10px;
+  width: 115%;
+  height: 7px;
   border-bottom: 2px solid #337AB6;
   position: inherit;
-  margin-bottom: 15px;
   float: right;
+}
+
+.titulo{
+  margin-top: 10px;
+  margin-left: 20px;
+  font-size: 12px;
+  color: #1C83C6;
 }
 
 body{
