Se agrega el calculo inicial de re invertir cetes

--- a/src/main/resources/templates/cetes/main-cetes.html
+++ b/src/main/resources/templates/cetes/main-cetes.html
@@ -45,17 +45,18 @@
             </div>
             <div class="form-group field">
               <label class="option block">
-                  <input name="mobileos" value="FR" type="checkbox"/>
+                  <input id="check-reinvertir" type="checkbox" v-on:change="changeReInvertir"/>
                   <span class="checkbox"></span>  ¿Quieres que se reinviertan automáticamente el capital y los rendimientos en cetes 28 días?
               </label>
             </div>
-            <div class="form-group field">
+            <div class="form-group field" id="div-reinvertir" style="display:none;">
               <div id="slidecontainer">
                 <div class="row">
                   <div class="col-2"><span class="text">Tiempo</span></div>
-                  <div class="col-9"><input type="range" min="1" max="12" value="1" id="myRange" style="width:100%; padding-left: 20px;" /></div>
+                  <div class="col-9"><input type="range" min="1" max="365" value="1" id="myRange" style="width:100%; padding-left: 20px;" /></div>
                 </div>
               </div>
+              <p class="text"><span id="dias-inversion" class="text-bold"></span> días</p>
             </div>
             <div class="row justify-content-center" style="margin-bottom: 3rem; margin-top: 3rem;">
               <input type="button" name="" value="Comparar" class="button btn-primary"/>
@@ -261,11 +262,11 @@
 
             </div>
           </div>
-          <div style="display:none;" class="row">
+          <div style="display:none;" class="row" id="labelReinvertir">
             <span class="titulo">Con Reinversion automatica</span>
           </div>
           <div class="row">
-            <div style="display:none;" class="col-3 resultado-calc-div">
+            <div style="display:none;" id="result-2" class="col-3 resultado-calc-div">
               <div class="row row-cetes">
                 <div class="col-4"></div>
                 <div class="col-3"><span class="label-calc">Titulos</span></div>
@@ -273,44 +274,44 @@
               </div>
               <div class="row row-cetes">
                 <div class="col-4"><span class="label-calc pull-right">Cetes:</span></div>
-                <div class="col-3"><span class="label-resultado">123</span></div>
-                <div class="col-5"><span class="label-resultado">12.1%</span></div>
+                <div class="col-3 col-result"><span class="label-resultado">{{ noTitulosCetes }}</span></div>
+                <div class="col-5 col-result"><span class="label-resultado">{{ tasaBrutaCetes }} %</span></div>
               </div>
               <div class="row row-cetes">
                 <div class="col-4"><span class="label-calc pull-right">Bonddia:</span></div>
-                <div class="col-3"><span class="label-resultado">123</span></div>
-                <div class="col-5"><span class="label-resultado">12.1%</span></div>
+                <div class="col-3 col-result"><span class="label-resultado">{{ noTitulosBonddia }}</span></div>
+                <div class="col-5 col-result"><span class="label-resultado">{{ tasaBrutaBonddia }}%</span></div>
               </div>
               <div class="line"></div>
               <br/>
 
               <div class="row row-cetes">
                 <div class="col-1"><img src="images/question.png" alt="" /> </div>
-                <div class="col-7"><span class="label-calc pull-right">Inversion Cetes:</span></div>
-                <div class="col-3"><span class="label-resultado">12.1%</span></div>
+                <div class="col-6"><span class="label-calc pull-right">Inversion Cetes:</span></div>
+                <div class="col-4 col-result"><span class="label-resultado">$ {{ inversionCetes }}</span></div>
               </div>
               <div class="row row-cetes">
                 <div class="col-1"><img src="images/question.png" alt="" /> </div>
-                <div class="col-7"><span class="label-calc pull-right">Inversion Bonddia:</span></div>
-                <div class="col-3"><span class="label-resultado">12.1%</span></div>
+                <div class="col-6"><span class="label-calc pull-right">Inversion Bonddia:</span></div>
+                <div class="col-4 col-result"><span class="label-resultado">$ {{ inversionBonddia }}</span></div>
               </div>
               <div class="row row-cetes">
                 <div class="col-1"><img src="images/question.png" alt="" /> </div>
-                <div class="col-7"><span class="label-calc pull-right">Interes Bruto:</span></div>
-                <div class="col-3"><span class="label-resultado">12.1%</span></div>
+                <div class="col-6"><span class="label-calc pull-right">Interes Bruto:</span></div>
+                <div class="col-4 col-result"><span class="label-resultado">$ {{ interesBruto }}</span></div>
               </div>
               <div class="row row-cetes">
                 <div class="col-1"><img src="images/question.png" alt="" /> </div>
-                <div class="col-7"><span class="label-calc pull-right">ISR:</span></div>
-                <div class="col-3"><span class="label-calc-bold">12.1%</span></div>
+                <div class="col-6"><span class="label-calc pull-right">ISR:</span></div>
+                <div class="col-4 col-result"><span class="label-calc-bold">$ {{ isr }}</span></div>
               </div>
               <div class="line"></div>
               <br/>
 
               <div class="row row-cetes">
                 <div class="col-1"><img src="images/question.png" alt="" /> </div>
-                <div class="col-7"><span class="label-calc pull-right">Monto total:</span></div>
-                <div class="col-3"><span class="label-resultado">12.1%</span></div>
+                <div class="col-6"><span class="label-calc pull-right">Monto total:</span></div>
+                <div class="col-4 col-result"><span class="label-resultado">$ {{ montoTotal }}</span></div>
               </div>
 
             </div>
