--- a/src/main/resources/static/css/main-styles.css
+++ b/src/main/resources/static/css/main-styles.css
@@ -62,6 +62,20 @@ body{
   background-color: #F0F0F0;
 }
 
+.titulos-comparar{
+  background: #1C83C6;
+  color: white;
+  padding: 10px;
+  border-radius: 10px;
+  font-weight: bold;
+}
+
+.div-titulos{
+  margin-bottom: 15px;
+  margin-top: 15px;
+  margin-left: 25%;
+}
+
 input[type="range"]::-moz-range-progress {
   background-color: #1C83C6;
 }
