--- a/src/main/resources/templates/cetes/main-cetes.html
+++ b/src/main/resources/templates/cetes/main-cetes.html
@@ -486,12 +486,40 @@
 
             </div>
           </div>
+          <div class="row justify-content-start" style="margin-bottom: 3rem; margin-top: 1rem; display:none;" id="div-graficar">
+            <div class="col-3">
+              <input id="buttonGraficar" type="button" name="" value="Graficar" class="button btn-primary" v-on:click="graficar"/>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="modalGrafica" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLongTitle">Grafica CETES</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div id="chart" class="chart">
+
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+          </div>
         </div>
       </div>
     </div>
   </body>
   <script src="/js/jquery-3.2.1.js" charset="utf-8"></script>
+  <script src="/js/bootstrap.js" charset="utf-8"></script>
   <script src="/js/util.js" charset="utf-8"></script>
   <script src="/js/vue.js" charset="utf-8"></script>
+  <script src="/js/highcharts.js" charset="utf-8"></script>
   <script src="/js/cetes.js" charset="utf-8"></script>
 </html>
