--- a/src/main/resources/templates/cetes/main-cetes.html
+++ b/src/main/resources/templates/cetes/main-cetes.html
@@ -9,7 +9,23 @@
     <link rel="stylesheet" href="/css/main-styles.css"/>
   </head>
   <body>
-    <div class="container-fluid">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="/cetes">CETES</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">BONDES</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">BONOS</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">UNIBONOS</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="container-fluid" style="margin-top:50px">
       <div class="row smart-forms">
         <div class="col-2 seccion">
           <form style="margin-top: 20px;" id="form-cetes">
