--- a/src/main/resources/templates/cetes/main-cetes.html
+++ b/src/main/resources/templates/cetes/main-cetes.html
@@ -521,9 +521,7 @@
             </button>
           </div>
           <div class="modal-body">
-            <div id="chart" class="chart">
-
-            </div>
+            <div id="chart" class="chart"></div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
