Se crea la calculadora de BONOS :)

--- a/src/main/resources/templates/bonos/main-bonos.html
+++ b/src/main/resources/templates/bonos/main-bonos.html
@@ -32,10 +32,10 @@
     <div class="container-fluid" style="margin-top:50px">
       <div class="row smart-forms">
         <div class="col-2 seccion">
-          <form style="margin-top: 20px;" id="form-bondes">
+          <form style="margin-top: 20px;" id="form-bonos">
             <div class="spacer-b30">
               <div class="tagline" style="">
-                <span>Bondes</span>
+                <span>Bonos</span>
               </div>
             </div>
             <div class="form-group">
@@ -52,8 +52,6 @@
               <div class="field select">
                 <select id="plazo" name="plazo">
                   <option value="">Seleccione un plazo</option>
-                  <option value="12">1 años</option>
-                  <option value="24">2 años</option>
                   <option value="36">3 años</option>
                   <option value="48">4 años</option>
                   <option value="60">5 años</option>
@@ -78,7 +76,7 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLongTitle">Grafica BONDES</h5>
+            <h5 class="modal-title" id="exampleModalLongTitle">Grafica BONOS</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
@@ -100,5 +98,5 @@
   <script src="/js/util.js" charset="utf-8"></script>
   <script src="/js/vue.js" charset="utf-8"></script>
   <script src="/js/highcharts.js" charset="utf-8"></script>
-  <script src="/js/bondes.js" charset="utf-8"></script>
+  <script src="/js/bonos.js" charset="utf-8"></script>
 </html>
