--- a/src/main/resources/templates/cetes/main-cetes.html
+++ b/src/main/resources/templates/cetes/main-cetes.html
@@ -18,10 +18,13 @@
           <a class="nav-link" href="/bondes">BONDES</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">BONOS</a>
+          <a class="nav-link" href="/bonos">BONOS</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">UNIBONOS</a>
+          <a class="nav-link" href="#">UDIBONOS</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">BONDDIA</a>
         </li>
       </ul>
     </nav>
