--- a/src/main/resources/templates/cetes/main-cetes.html
+++ b/src/main/resources/templates/cetes/main-cetes.html
@@ -21,7 +21,7 @@
           <a class="nav-link" href="/bonos">BONOS</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">UDIBONOS</a>
+          <a class="nav-link" href="/udibonos">UDIBONOS</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="#">BONDDIA</a>
