Se agrega la calculadora de bonddia

--- a/src/main/resources/templates/bonos/main-bonos.html
+++ b/src/main/resources/templates/bonos/main-bonos.html
@@ -24,7 +24,7 @@
           <a class="nav-link" href="/udibonos">UDIBONOS</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">BONDDIA</a>
+          <a class="nav-link" href="/bonddia">BONDDIA</a>
         </li>
       </ul>
     </nav>
