--- a/src/main/resources/templates/bonddia/main-bonddia.html
+++ b/src/main/resources/templates/bonddia/main-bonddia.html
@@ -32,10 +32,10 @@
     <div class="container-fluid" style="margin-top:50px">
       <div class="row smart-forms">
         <div class="col-2 seccion">
-          <form style="margin-top: 20px;" id="form-bondes">
+          <form style="margin-top: 20px;" id="form-bonddia">
             <div class="spacer-b30">
               <div class="tagline" style="">
-                <span>Bondes</span>
+                <span>Bonddia</span>
               </div>
             </div>
             <div class="form-group">
@@ -52,11 +52,10 @@
               <div class="field select">
                 <select id="plazo" name="plazo">
                   <option value="">Seleccione un plazo</option>
-                  <option value="12">1 años</option>
-                  <option value="24">2 años</option>
-                  <option value="36">3 años</option>
-                  <option value="48">4 años</option>
-                  <option value="60">5 años</option>
+                  <option value="28">28</option>
+                  <option value="91">91</option>
+                  <option value="182">182</option>
+                  <option value="360">360</option>
                 </select>
                 <small id="errorPlazo" class="form-text text-red" style="display: none;">El plazo es un campo requerido.</small>
                 <i class="arrow"></i>
@@ -68,8 +67,21 @@
           </form>
         </div>
         <div class="col seccion">
-          <div id="tableResult" style="margin-top: 25px; margin-bottom: 25px;"></div>
-          <input id="buttonGraficar" style="display: none;" type="button" name="" value="Graficar" class="button btn-primary" v-on:click="graficar"/>
+          <div style="display:none;" id="result-1" class="col-3 resultado-calc-div">
+            <div class="row row-cetes">
+              <div class="col-6"><span class="label-calc pull-right">Inversion inicial:</span></div>
+              <div class="col-3 col-result"><span class="label-resultado">{{ inversionInicial }}</span></div>
+            </div>
+            <div class="row row-cetes">
+              <div class="col-6"><span class="label-calc pull-right">Inversion final:</span></div>
+              <div class="col-3 col-result"><span class="label-resultado">{{ inversionFinal }}</span></div>
+            </div>
+            <div class="row row-cetes">
+              <div class="col-6"><span class="label-calc pull-right">Remanente:</span></div>
+              <div class="col-3 col-result"><span class="label-resultado">{{ remanente }}</span></div>
+            </div>
+            <input id="buttonGraficar" type="button" style="margin-top: 20px;" name="" value="Graficar" class="button btn-primary" v-on:click="graficar"/>
+          </div>
         </div>
       </div>
     </div>
@@ -78,7 +90,7 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLongTitle">Grafica BONDES</h5>
+            <h5 class="modal-title" id="exampleModalLongTitle">Grafica BONOS</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
@@ -100,5 +112,5 @@
   <script src="/js/util.js" charset="utf-8"></script>
   <script src="/js/vue.js" charset="utf-8"></script>
   <script src="/js/highcharts.js" charset="utf-8"></script>
-  <script src="/js/bondes.js" charset="utf-8"></script>
+  <script src="/js/bonddia.js" charset="utf-8"></script>
 </html>
