--- a/src/main/resources/templates/bonos/main-bonos.html
+++ b/src/main/resources/templates/bonos/main-bonos.html
@@ -3,28 +3,28 @@
   <head>
     <meta charset="utf-8"/>
     <title>Cetes</title>
-    <link rel="stylesheet" href="/css/bootstrap.css"/>
-    <link rel="stylesheet" href="/css/font-awesome.css"/>
-    <link rel="stylesheet" href="/css/smart-forms.css"/>
-    <link rel="stylesheet" href="/css/main-styles.css"/>
+    <link rel="stylesheet" href="/calculadoras/css/bootstrap.css"/>
+    <link rel="stylesheet" href="/calculadoras/css/font-awesome.css"/>
+    <link rel="stylesheet" href="/calculadoras/css/smart-forms.css"/>
+    <link rel="stylesheet" href="/calculadoras/css/main-styles.css"/>
   </head>
   <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="/cetes">CETES</a>
+          <a class="nav-link" href="/calculadoras/cetes">CETES</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/bondes">BONDES</a>
+          <a class="nav-link" href="/calculadoras/bondes">BONDES</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/bonos">BONOS</a>
+          <a class="nav-link" href="/calculadoras/bonos">BONOS</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/udibonos">UDIBONOS</a>
+          <a class="nav-link" href="/calculadoras/udibonos">UDIBONOS</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/bonddia">BONDDIA</a>
+          <a class="nav-link" href="/calculadoras/bonddia">BONDDIA</a>
         </li>
       </ul>
     </nav>
@@ -93,10 +93,10 @@
       </div>
     </div>
   </body>
-  <script src="/js/jquery-3.2.1.js" charset="utf-8"></script>
-  <script src="/js/bootstrap.js" charset="utf-8"></script>
-  <script src="/js/util.js" charset="utf-8"></script>
-  <script src="/js/vue.js" charset="utf-8"></script>
-  <script src="/js/highcharts.js" charset="utf-8"></script>
-  <script src="/js/bonos.js" charset="utf-8"></script>
+  <script src="/calculadoras/js/jquery-3.2.1.js" charset="utf-8"></script>
+  <script src="/calculadoras/js/bootstrap.js" charset="utf-8"></script>
+  <script src="/calculadoras/js/util.js" charset="utf-8"></script>
+  <script src="/calculadoras/js/vue.js" charset="utf-8"></script>
+  <script src="/calculadoras/js/highcharts.js" charset="utf-8"></script>
+  <script src="/calculadoras/js/bonos.js" charset="utf-8"></script>
 </html>
