--- a/src/main/resources/templates/cetes/main-cetes.html
+++ b/src/main/resources/templates/cetes/main-cetes.html
@@ -41,7 +41,7 @@
               <label class="field prepend-icon">
                 <input id="monto" class="gui-input" name="monto" placeholder="Monto" type="number" />
                 <small id="errorMonto" class="form-text text-red" style="display: none;">El monto es un campo requerido.</small>
-                <small id="errorRangoMonto" class="form-text text-red" style="display: none;">El monto debe ser entre 1 y 10,000,000.</small>
+                <small id="errorRangoMonto" class="form-text text-red" style="display: none;">El monto debe ser entre 100 y 10,000,000.</small>
                 <span class="field-icon">
                   <i class="fa fa-usd"/>
                 </span>
@@ -518,7 +518,7 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLongTitle">Grafica CETES</h5>
+            <h5 class="modal-title" id="exampleModalLongTitle">CETES</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
