--- a/src/main/resources/templates/cetes/main-cetes.html
+++ b/src/main/resources/templates/cetes/main-cetes.html
@@ -9,25 +9,26 @@
     <link rel="stylesheet" href="/calculadoras/css/main-styles.css"/>
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+    <nav class="navbar navbar-expand-sm bg-blue navbar-blue fixed-top" style="background-color:#1C83C6;">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="/calculadoras/cetes">CETES</a>
+          <a style="color:#ffffff;" class="nav-link" href="/calculadoras/cetes">CETES</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/calculadoras/bondes">BONDES</a>
+          <a style="color:#ffffff;" class="nav-link" href="/calculadoras/bondes">BONDES</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/calculadoras/bonos">BONOS</a>
+          <a style="color:#ffffff;" class="nav-link" href="/calculadoras/bonos">BONOS</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/calculadoras/udibonos">UDIBONOS</a>
+          <a style="color:#ffffff;" class="nav-link" href="/calculadoras/udibonos">UDIBONOS</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/calculadoras/bonddia">BONDDIA</a>
+          <a style="color:#ffffff;" class="nav-link" href="/calculadoras/bonddia">BONDDIA</a>
         </li>
       </ul>
     </nav>
+    
     <div class="container-fluid" style="margin-top:50px">
       <div class="row smart-forms">
         <div class="col-2 seccion">
@@ -73,7 +74,7 @@
               <div id="slidecontainer">
                 <div class="row">
                   <div class="col-2"><span class="text">Tiempo</span></div>
-                  <div class="col-9"><input type="range" min="28" max="365" value="1" id="myRange" style="width:100%; padding-left: 20px;" /></div>
+                  <div class="col-9"><input type="range" min="1" max="12" value="1" id="myRange" style="width:100%; padding-left: 20px;" /></div>
                 </div>
               </div>
               <p class="text"><span id="dias-inversion" class="text-bold"></span> días</p>
