--- a/src/main/resources/templates/udibonos/main-udibonos.html
+++ b/src/main/resources/templates/udibonos/main-udibonos.html
@@ -9,22 +9,22 @@
     <link rel="stylesheet" href="/calculadoras/css/main-styles.css"/>
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+    <nav class="navbar navbar-expand-sm bg-blue navbar-blue fixed-top" style="background-color:#1C83C6;">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="/calculadoras/cetes">CETES</a>
+          <a style="color:#ffffff;" class="nav-link" href="/calculadoras/cetes">CETES</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/calculadoras/bondes">BONDES</a>
+          <a style="color:#ffffff;" class="nav-link" href="/calculadoras/bondes">BONDES</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/calculadoras/bonos">BONOS</a>
+          <a style="color:#ffffff;" class="nav-link" href="/calculadoras/bonos">BONOS</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/calculadoras/udibonos">UDIBONOS</a>
+          <a style="color:#ffffff;" class="nav-link" href="/calculadoras/udibonos">UDIBONOS</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/calculadoras/bonddia">BONDDIA</a>
+          <a style="color:#ffffff;" class="nav-link" href="/calculadoras/bonddia">BONDDIA</a>
         </li>
       </ul>
     </nav>
