--- a/src/main/resources/templates/bonddia/main-bonddia.html
+++ b/src/main/resources/templates/bonddia/main-bonddia.html
@@ -69,6 +69,10 @@
         <div class="col seccion">
           <div style="display:none;" id="result-1" class="col-3 resultado-calc-div">
             <div class="row row-cetes">
+              <div class="col-6"><span class="label-calc pull-right">Tasa:</span></div>
+              <div class="col-3 col-result"><span class="label-resultado">{{ tasa }}</span></div>
+            </div>
+            <div class="row row-cetes">
               <div class="col-6"><span class="label-calc pull-right">Inversion inicial:</span></div>
               <div class="col-3 col-result"><span class="label-resultado">{{ inversionInicial }}</span></div>
             </div>
