--- a/src/main/resources/templates/bondes/main-bondes.html
+++ b/src/main/resources/templates/bondes/main-bondes.html
@@ -52,6 +52,7 @@
               <div class="field select">
                 <select id="plazo" name="plazo">
                   <option value="">Seleccione un plazo</option>
+                  <option value="12">1 año</option>
                   <option value="60">5 años</option>
                 </select>
                 <small id="errorPlazo" class="form-text text-red" style="display: none;">El plazo es un campo requerido.</small>
