--- a/src/main/resources/templates/cetes/main-cetes.html
+++ b/src/main/resources/templates/cetes/main-cetes.html
@@ -77,7 +77,7 @@
                   <div class="col-9"><input type="range" min="1" max="12" value="1" id="myRange" style="width:100%; padding-left: 20px;" /></div>
                 </div>
               </div>
-              <p class="text"><span id="dias-inversion" class="text-bold"></span> meses</p>
+              <p class="text"><span id="dias-inversion" class="text-bold"></span> </p>
             </div>
             <div class="row justify-content-center" style="margin-bottom: 3rem; margin-top: 3rem;">
               <input type="button" name="" value="Comparar" class="button btn-primary" v-on:click="comparar"/>
