Se agrega la grafica 1 año bondes

--- a/src/main/resources/templates/bondes/main-bondes.html
+++ b/src/main/resources/templates/bondes/main-bondes.html
@@ -66,7 +66,7 @@
         </div>
         <div class="col seccion">
           <div id="tableResult" style="margin-top: 25px; margin-bottom: 25px;"></div>
-          <input id="buttonGraficar" style="display: none;" type="button" name="" value="Graficar" class="button btn-primary" v-on:click="graficar"/>
+          <input id="buttonGraficar" style="display: none; margin-bottom: 15px;" type="button" name="" value="Graficar" class="button btn-primary" v-on:click="graficar"/>
         </div>
       </div>
     </div>
