--- a/src/main/resources/templates/bonddia/main-bonddia.html
+++ b/src/main/resources/templates/bonddia/main-bonddia.html
@@ -87,14 +87,14 @@
               </div>
               <div class="line"></div>
               <br/>
-              
+
               <div class="row row-cetes">
                 <div class="col-1"><img src="/calculadoras/images/question.png" alt="" data-toggle="tooltip" data-placement="right" title="Es el capital final que incluye los intereses ganados y el remanente de la inversón menos el ISR"/> </div>
                 <div class="col-6"><span class="label-calc pull-right">Monto total:</span></div>
                 <div class="col-4 col-result"><span class="label-resultado">$ {{ inversionFinal }}</span></div>
               </div>
-              
- 
+
+
             <input id="buttonGraficar" type="button" style="margin-top: 20px;" name="" value="Graficar" class="button btn-primary" v-on:click="graficar"/>
           </div>
         </div>
@@ -137,7 +137,8 @@
 	$(function() {
 
 		var $form = $( "#form-bonddia" );
-		var $input = $form.find( "input" );
+	//	var $input = $form.find( "input" );
+    var $input = $("input[name=monto]");
 
 		$input.on( "keyup", function( event ) {
 
